# bluenotify-backend

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  diesel.toml  docker-compose.prod.yml  docker-compose.yml  firestore-listen-token.42.tmp  firestore_reader.Dockerfile  jetstream_reader.Dockerfile  manual_polling.Dockerfile  nats.conf  notifier.Dockerfile  pyproject.toml  web_server.Dockerfile
.github/workflows/: deploy_firestore_reader.yml  deploy_jetstream_reader.yml  deploy_notifier.yml  deploy_web_server.yml  server_redeploy.yml
apps/jetstream-reader/: README.md  pyproject.toml  run_server.py
apps/jetstream-reader/src/: jetstream_models.py  prometheus.py  sentry.py  server.py
apps/jetstream-reader/tests/: conftest.py  test_jetstream_models.py
apps/manual-polling/: pyproject.toml  run_server.py
apps/manual-polling/src/: prometheus.py  server.py
apps/notifier/: README.md  pyproject.toml  run_server.py
apps/notifier/src/: __init__.py  bluesky.py  firestore.py  notify.py  prometheus.py  server.py
bluesky_utils/: Cargo.toml
bluesky_utils/src/: lib.rs
database_schema/: Cargo.toml
database_schema/src/: lib.rs  models.rs  schema.patch  schema.rs  timestamp.rs
deployment/: docker-compose.all.yml  docker-compose.jetstream_reader.yml  docker-compose.manual_polling.yml  docker-compose.notifier.yml
firestore_reader/: Cargo.toml
firestore_reader/src/: main.rs
jetstream_reader/: Cargo.toml
jetstream_reader/src/: main.rs
migrations/2025-03-21-042003_create_notifications/: down.sql  up.sql
migrations/2025-03-22-033118_drop_is_read/: down.sql  up.sql
migrations/2025-04-03-013244_store_user_settings/: down.sql  up.sql
migrations/2025-04-20-211752_track_follows/: down.sql  up.sql
migrations/2025-04-21-203823_remove_id_from_follows/: down.sql  up.sql
migrations/2025-06-19-190426_add_device_uuid_to_users/: down.sql  up.sql
notifier/: Cargo.toml
notifier/src/: fcm.rs  main.rs
user_settings/: Cargo.toml
user_settings/src/: lib.rs
web_server/: Cargo.toml
web_server/src/: json.rs  main.rs
