[package]
name = "bluesky_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
lazy_static = "1.5.0"
tokio = { version = "1.43.0", features = ["full"] }
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0.138"
tracing = "0.1.41"