[package]
name = "database_schema"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
diesel = { version = "2.2.8", features = ["postgres", "chrono"] }
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
diesel-async = { version = "0.5.2", features = ["postgres", "deadpool"] }
serde = "1.0.217"
serde_json = "1.0.138"
tracing = "0.1.41"
