[package]
name = "firestore_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-nats = "0.38.0"
axum = "0.8.1"
chrono = "0.4.39"
firestore = "0.44.1"
futures = "0.3.31"
lazy_static = "1.5.0"
prometheus = "0.13.4"
serde = "1.0.217"
serde_json = "1.0.138"
sentry = "0.36.0"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

user_settings = { path = "../user_settings" }
