[package]
name = "jetstream_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-nats = "0.38.0"
axum = { version = "0.8.1", features = ["macros"] }
chrono = "0.4.39"
diesel = { version = "2.2.8", features = ["postgres"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
diesel-async = { version = "0.5.2", features = ["postgres", "deadpool"] }
futures = "0.3.31"
futures-util = { version = "0.3.28", features = ["sink", "std"] }
lazy_static = "1.5.0"
prometheus = "0.13.4"
rand = "0.9.0"
sentry = "0.36.0"
sentry-tracing = "0.36.0"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.17.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tracing = "0.1.41"
tracing-loki = "0.2.6"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"

bluesky_utils = { path = "../bluesky_utils" }
database_schema = { path = "../database_schema" }