[package]
name = "notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
again = "0.1.2"
async-nats = "0.38.0"
axum = "0.8.1"
bluesky_utils = { path = "../bluesky_utils" }
cached = { version = "0.54.0", features = ["async"] }
chrono = "0.4.39"
diesel = { version = "2.2.8", features = ["postgres"] }
dotenvy = "0.15.7"
futures = "0.3.31"
lazy_static = "1.5.0"
prometheus = "0.13.4"
reqwest = { version = "0.12.12", features = ["json"] }
sentry = "0.36.0"
serde = "1.0.217"
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-loki = "0.2.6"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
user_settings = { path = "../user_settings" }
database_schema = { path = "../database_schema" }
yup-oauth2 = "9.0.0"
diesel-async = { version = "0.5.2", features = ["postgres", "deadpool"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
sentry-tracing = "0.36.0"
