[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
chrono = "0.4.39"
database_schema = { path = "../database_schema" }
diesel = { version = "2.2.8", features = ["postgres"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
diesel-async = { version = "0.5.2", features = ["postgres", "deadpool"] }
futures = "0.3.31"
lazy_static = "1.5.0"
prometheus = "0.13.4"
sentry = "0.36.0"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-loki = "0.2.6"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
tower_governor = { version = "0.7.0" }
axum-prometheus = "0.8.0"
