[project]
name = "jetstream-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "custom-types",
    "async-utils",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "sentry-sdk>=2.19.2",
    "prometheus-client>=0.21.1",
]

[tool.uv]
package = false

[tool.uv.sources]
custom-types = { workspace = true }
async-utils = { workspace = true }
