[project]
name = "notifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "async-utils",
    "atproto>=0.0.56",
    "custom-types",
    "fastapi[standard]>=0.115.5",
    "firebase-admin>=6.6.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false

[tool.uv.sources]
custom-types = { workspace = true }
async-utils = { workspace = true }
