[project]
name = "notifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "async-utils",
    "atproto>=0.0.56",
    "custom-types",
    "fastapi[standard]>=0.115.5",
    "firebase-admin>=6.6.0",
    "httpx>=0.27.0",
    "prometheus-client>=0.21.1",
    "sentry-sdk[fastapi]>=2.19.2",
]

[tool.uv]
package = false

[tool.uv.sources]
custom-types = { workspace = true }
async-utils = { workspace = true }
